test/tests/BadIndexType.frost
method main() {
    def a := [1, 2, 3, 4, 5]
    Console.printLine(a["used to give a bad error message"])
}